AzureResources/arm-databricks-vnet-nsg.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "prefix": {
            "type": "string",
            "metadata": {
                "description": "The prefix of naming convention"
            }
        },
        "suffix": {
            "type": "string",
            "defaultValue": "",
            "metadata": {
                "description": "The suffix of naming convention"
            }
        },
        "environment": {
            "type": "string",
            "metadata": {
                "description": "The name of the environment to deploy into"
            }
        },
        "pricingTier": {
            "type": "string",
            "defaultValue": "standard",
            "allowedValues": [
                "standard",
                "premium"
            ],
            "metadata": {
                "description": "The pricing tier of workspace."
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "nsgName": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "vnetRG": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "vnetName": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "publicSubnetName": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "privateSubnetName": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "publicSubnetCidr": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "privateSubnetCidr": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "nsgId": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "routeTableId": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "databricksPricingTier": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "customVirtualNetworkId": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        },
        "": {
            "type": "string",
            "metadata": {
                "description": "Location for all resources."
            }
        }
        
    },
    "functions": [
        {
            "namespace": "ads",
            "members": {
                "serviceWithNamingStandard": {
                    "parameters": [
                        {
                            "name": "prefix",
                            "type": "string"
                        },
                        {
                            "name": "serviceacronym",
                            "type": "string"
                        },
                        {
                            "name": "environment",
                            "type": "string"
                        },
                        {
                            "name": "suffix",
                            "type": "string"
                        }
                    ],
                    "output": {
                        "type": "string",
                        "value": "[concat(parameters('prefix'), '-', parameters('serviceacronym'), '-', parameters('environment'))]"
                    }
                }
            }
        }
    ],
    "variables": {
        "workspaceName": "[concat(parameters('prefix'), '-dbws-', parameters('environment'))]",
        "managedResourceGroupName": "[concat(resourceGroup().name, '-', variables('workspaceName'), '-', uniqueString(variables('workspaceName'), resourceGroup().id))]"
    },
    "resources": [
        {
            "apiVersion": "2019-11-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "location": "[parameters('location')]",
            "name": "[parameters('nsgName')]",
            "properties": {
                "securityRules": [
                  {
                      "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                      "properties": {
                          "description": "Required for worker nodes communication within a cluster.",
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "VirtualNetwork",
                          "access": "Allow",
                          "priority": 100,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-ssh",
                      "properties": {
                          "description": "Required for Databricks control plane management of worker nodes.",
                          "protocol": "tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "22",
                          "sourceAddressPrefix": "AzureDatabricks",
                          "destinationAddressPrefix": "VirtualNetwork",
                          "access": "Allow",
                          "priority": 101,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-proxy",
                      "properties": {
                          "description": "Required for Databricks control plane communication with worker nodes.",
                          "protocol": "tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "5557",
                          "sourceAddressPrefix": "AzureDatabricks",
                          "destinationAddressPrefix": "VirtualNetwork",
                          "access": "Allow",
                          "priority": 102,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp",
                      "properties": {
                          "description": "Required for workers communication with Databricks Webapp.",
                          "protocol": "tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "443",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "AzureDatabricks",
                          "access": "Allow",
                          "priority": 100,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                      "properties": {
                          "description": "Required for workers communication with Azure SQL services.",
                          "protocol": "tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "3306",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "Sql",
                          "access": "Allow",
                          "priority": 101,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                      "properties": {
                          "description": "Required for workers communication with Azure Storage services.",
                          "protocol": "tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "443",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "Storage",
                          "access": "Allow",
                          "priority": 102,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                      "properties": {
                          "description": "Required for worker nodes communication within a cluster.",
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "VirtualNetwork",
                          "access": "Allow",
                          "priority": 103,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                      "properties": {
                          "description": "Required for worker communication with Azure Eventhub services.",
                          "protocol": "tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "9093",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "EventHub",
                          "access": "Allow",
                          "priority": 104,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  }
              ]
            }
        },     
        {
            "apiVersion": "2017-05-10",
            "name": "nestedTemplate",
            "type": "Microsoft.Resources/deployments",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('nsgName'))]"
            ],
            "resourceGroup": "[parameters('vnetRG')]",
            "properties": {
                "mode": "Incremental",
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
                    "contentVersion": "1.0.0.0",
                    "parameters": {},
                    "variables": {},
                    "resources": [
                        {
                            "apiVersion": "2019-11-01",
                            "type": "Microsoft.Network/virtualNetworks/subnets",
                            "name": "[concat(parameters('vnetName'), '/', parameters('publicSubnetName'))]",
                            "location": "[parameters('location')]",
                            "properties": {
                                "addressPrefix": "[parameters('publicSubnetCidr')]",
                                "networkSecurityGroup": {
                                    "id": "[parameters('nsgId')]"
                                },
                                "routeTable": {
                                    "id": "[parameters('routeTableId')]"
                                },
                                "serviceEndpoints": [
                                    {
                                        "service": "Microsoft.Storage",
                                        "locations": [
                                            "australiaeast",
                                            "australiasoutheast"
                                        ]
                                    }
                                ],
                                "delegations": [
                                    {
                                        "name": "DDIDatabricksWorkspace",
                                        "properties": {
                                            "serviceName": "Microsoft.Databricks/workspaces"
                                        }
                                    }
                                ]
                            }
                        },
                        {
                            "apiVersion": "2019-11-01",
                            "type": "Microsoft.Network/virtualNetworks/subnets",
                            "name": "[concat(parameters('vnetName'), '/', parameters('privateSubnetName'))]",
                            "location": "[parameters('location')]",
                            "dependsOn": [
                                "[concat('Microsoft.Network/virtualNetworks/', parameters('vnetName'), '/subnets/', parameters('publicSubnetName'))]"
                            ],
                            "properties": {
                                "addressPrefix": "[parameters('privateSubnetCidr')]",
                                "networkSecurityGroup": {
                                    "id": "[parameters('nsgId')]"
                                },
                                "routeTable": {
                                    "id": "[parameters('routeTableId')]"
                                },
                                "serviceEndpoints": [
                                    {
                                        "service": "Microsoft.Storage",
                                        "locations": [
                                            "australiaeast",
                                            "australiasoutheast"
                                        ]
                                    }
                                ],
                                "delegations": [
                                    {
                                        "name": "DDIDatabricksWorkspace",
                                        "properties": {
                                            "serviceName": "Microsoft.Databricks/workspaces"
                                        }
                                    }
                                ]
                            }
                        }
                    ]
                },
                "parameters": {}
            }
        },
        {
            "apiVersion": "2018-04-01",
            "type": "Microsoft.Databricks/workspaces",
            "location": "[parameters('location')]",
            "name": "[parameters('workspaceName')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('nsgName'))]",
                "['Microsoft.Resources/deployments/nestedTemplate']"
            ],
            "sku": {
                "name": "[parameters('databricksPricingTier')]"
            },
            "comments": "Please do not use an existing resource group for ManagedResourceGroupId. Ensure that the subnet pairs are ",
            "properties": {
                "ManagedResourceGroupId": "[parameters('managedResourceGroupId')]",
                "parameters": {
                    "customVirtualNetworkId": {
                        "value": "[parameters('customVirtualNetworkId')]"
                    },
                    "customPublicSubnetName": {
                        "value": "[parameters('publicSubnetName')]"
                    },
                    "customPrivateSubnetName": {
                        "value": "[parameters('privateSubnetName')]"
                    }
                }
            }
        }
    ],
    "outputs": {
        "workspaceName": {
            "type": "string",
            "value": "[parameters('workspaceName')]"
        }
    }
}
